--- a/ajax.html
+++ b/ajax.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" href="ajax.css">
     </head>
     <body>
-        <div class="search_bar"></div>
+        <div class="search_bar">
+            <input type="text" class="search">
+        </div>
     <script src="ajax.js"></script>
+
     </body>
 </html>
 
