--- a/ajax.html
+++ b/ajax.html
@@ -2,15 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Ajax</title>
+        <title>Emojis</title>
         <link rel="stylesheet" href="ajax.css">
     </head>
     <body>
         <div class="search_bar">
-            <input type="text" class="search">
+            <input type="text" id="getText" class="search">
+        </div>
+        <div class="images">
+            <img id="dogs_1" src="dogs_1.jpg" alt="dog">
+            <img src="dogs_2.jpeg" alt="dog">
+            <img id="dogs_3" src="dogs_3.jpeg" alt="dog">
         </div>
     <script src="ajax.js"></script>
-
     </body>
 </html>
 
