--- a/ajax.html
+++ b/ajax.html
@@ -7,7 +7,12 @@
     </head>
     <body>
         <div class="search_bar">
-            <input type="text" id="getText" class="search">
+            <form class="search-form">
+                <input type="text" id="getText" class="search" placeholder="what dog are you looking for?">
+                <ul class="suggestions">
+                    <li>Filter For Breed</li>
+                </ul>
+            </form>
         </div>
         <div class="images">
             <img id="dogs_1" src="dogs_1.jpg" alt="dog">
