--- a/ajax.html
+++ b/ajax.html
@@ -6,13 +6,12 @@
         <link rel="stylesheet" href="ajax.css">
     </head>
     <body>
-        <div class="search_bar">
-            <form class="search-form">
-                <input type="text" id="getText" class="search" placeholder="what dog are you looking for?">
-                <ul class="suggestions">
-                    <li>Filter For Breed</li>
-                </ul>
-            </form>
+        <div class="image">
+            <button id="dogs" onclick="display_random_image()"></button>
+            <h4>Random Dog Appears</h4>
+            <div class="image_content">
+
+            </div>
         </div>
         <div class="images">
             <img id="dogs_1" src="dogs_1.jpg" alt="dog">
@@ -22,5 +21,3 @@
     <script src="ajax.js"></script>
     </body>
 </html>
-
-
