--- a/ajax.html
+++ b/ajax.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div class="image">
-            <button id="dogs" onclick="display_random_image()"></button>
+            <button id="dogs" onclick="display_random_image()">Click For Doggies
+            </button>
             <h4>Random Dog Appears</h4>
             <div class="image_content">
-
             </div>
         </div>
         <div class="images">
