--- a/ajax.html
+++ b/ajax.html
@@ -7,11 +7,10 @@
     </head>
     <body>
         <div class="image">
-            <button id="dogs" onclick="display_random_image()">Click For Doggies
-            </button>
+            <button id="dogs">Click For Doggies</button>
+            <img src='' id="image_content"/>
             <h4>Random Dog Appears</h4>
-            <div class="image_content">
-            </div>
+        <div class="image_content">
         </div>
         <div class="images">
             <img id="dogs_1" src="dogs_1.jpg" alt="dog">
@@ -21,3 +20,6 @@
     <script src="ajax.js"></script>
     </body>
 </html>
+
+
+
