--- a/ajax.html
+++ b/ajax.html
@@ -9,7 +9,7 @@
         <div class="image">
             <button id="unsplash">Click For Random Images</button>
         </div>
-        <div class="image_content">
+        <div id="image_content" class="image_content">
             <img src='' id="image_content"/>
         </div>
         <div class="images">
@@ -18,7 +18,6 @@
     <script src="ajax.js"></script>
     </body>
 </html>
-
 
 
 
