--- a/ajax.html
+++ b/ajax.html
@@ -7,33 +7,16 @@
     </head>
     <body>
         <div class="image">
-<<<<<<< HEAD
             <button id="unsplash">Click For Random Images</button>
         </div>
         <div id="image_content" class="image_content">
-            <img src='' id="image_content"/>
+            <p>Placeholder image</p>
         </div>
         <div class="images">
             
-=======
-            <button id="dogs">Click For Doggies</button>
-            <img src='' id="image_content"/>
-            <h4>Random Dog Appears</h4>
-        <div class="image_content">
-        </div>
-        <div class="images">
-            <img id="dogs_1" src="dogs_1.jpg" alt="dog">
-            <img src="dogs_2.jpeg" alt="dog">
-            <img id="dogs_3" src="dogs_3.jpeg" alt="dog">
->>>>>>> 52ac901ac4ec9356a4f4da66c0eb81024970637b
         </div>
     <script src="ajax.js"></script>
     </body>
 </html>
 
 
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 52ac901ac4ec9356a4f4da66c0eb81024970637b
