--- a/ajax.html
+++ b/ajax.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div class="image">
-            <button id="unsplash">Click For Random Images</button>
+            <button id="unsplash" onclick="renderDogs();">
+                To See Random Dog Images Click Here
+            </button>
         </div>
         <div id="image_content" class="image_content">
             <p>Placeholder image</p>
