--- a/ajax.html
+++ b/ajax.html
@@ -7,18 +7,17 @@
     </head>
     <body>
         <div class="image">
+            
+        </div>
+        <div id="image_content" class="image_content">
+            <div class="container"></div>
             <button id="unsplash" onclick="renderDogs();">
                 To See Random Dog Images Click Here
             </button>
         </div>
-        <div id="image_content" class="image_content">
-            <p>Placeholder image</p>
-        </div>
         <div class="images">
-            
         </div>
     <script src="ajax.js"></script>
     </body>
 </html>
-
 
