--- a/ajax.html
+++ b/ajax.html
@@ -10,12 +10,11 @@
             
         </div>
         <div id="image_content" class="image_content">
-            <div class="container"></div>
-            <button id="unsplash" onclick="renderDogs();">
-                To See Random Dog Images Click Here
+            <div id="container" class="container">
+            </div>
+            <button id="unsplash">
+                Random Dog Images Click Here
             </button>
-        </div>
-        <div class="images">
         </div>
     <script src="ajax.js"></script>
     </body>
