--- a/ajax.html
+++ b/ajax.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Emojis</title>
         <link rel="stylesheet" href="ajax.css">
     </head>
     <body>
-        <div class="image">
-            
-        </div>
         <div id="image_content" class="image_content">
-            <div id="container" class="container">
-            </div>
+            <div id="container" class="container"></div>
             <button id="unsplash">
                 Random Dog Images Click Here
             </button>
