--- a/ajax.html
+++ b/ajax.html
@@ -9,7 +9,7 @@
         <div id="image_content" class="image_content">
             <div id="container" class="container"></div>
             <button id="unsplash">
-                Random Dog Images Click Here
+                Dog Images
             </button>
         </div>
     <script src="ajax.js"></script>
